# host-insight-client

./: .gitmodules  Cargo.toml  README.md  build.rs
config/unit-14/: README.md  ada-launch.sh  ada.service  conf.toml  gps.sh  modem_setup.sh
scripts/: ada-client-exit-handler.service  ada-client.service  conf-fallback.toml  exit-handler.sh  host-insight-client.service
src/: can.rs  client.rs  gpio.rs  lib.rs  main.rs  net.rs  utils.rs
