[package]
name = "ada-client"
description = "A signal monitor and grpc client for GNU/Linux"
homepage = "https://hostmobility.com"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ada-client"
path = "src/main.rs"

[dependencies]
async-lock = "2.6.0"
tonic = { version = "0.8.3", features = ["tls"] }
prost = "0.11.3"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
tokio-socketcan = "0.3.1"
futures = { version = "0.3.25" }
gpio-cdev = { version = "0.5.1", features = ["async-tokio"] }
serde = "1.0.150"
toml = "0.5.9"
indexmap = { version = "1.9.1", optional = true }
serde_derive = "1.0.150"
bitflags = "1.3.2"
libc = "0.2.132"
nix = "0.26.1"
async-std = "1.12.0"
rand = "0.8.5"
home = "0.5.4"
can-dbc = "5.0.0"
codegen = "0.2.0"
lazy_static = "1.4.0"

[dev-dependencies]
futures-util = "0.3.25"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.4"

[features]
default = []
preserve_order = ["indexmap"]
