# Copyright (C) 2023  Host Mobility AB

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA

[package]
name = "ada-client"
description = "A signal monitor and grpc client for GNU/Linux"
homepage = "https://hostmobility.com"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ada-client"
path = "src/main.rs"

[dependencies]
async-lock = "2.6.0"
clap = { version = "3.2.23", features = ["cargo"] }
tonic = { version = "0.8.2", features = ["tls"] }
prost = "0.11.3"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
tokio-socketcan = "0.3.1"
futures = { version = "0.3.25" }
gpio-cdev = { version = "0.5.1", features = ["async-tokio"] }
serde = "1.0.150"
toml = "0.5.9"
indexmap = { version = "1.9.1", optional = true }
serde_derive = "1.0.150"
bitflags = "1.3.2"
libc = "0.2.132"
nix = "0.26.1"
async-std = "1.12.0"
rand = "0.8.5"
home = "0.5.4"
can-dbc = "5.0.0"
codegen = "0.2.0"
lazy_static = "1.4.0"

[dev-dependencies]
futures-util = "0.3.25"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.4"

[features]
default = []
preserve_order = ["indexmap"]
