# Copyright (C) 2023  Host Mobility AB

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA

[package]
name = "host-insight-client"
description = "A remote I/O client for GNU/Linux"
homepage = "https://github.com/hostmobility"
version = "0.5.1"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "host-insight-client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-lock = "3.4.1"
clap = { version = "4.5.42", features = ["cargo"] }
tonic = { version = "0.13.1", features = ["tls-ring"] }
prost = "0.13.5"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
tokio-socketcan = "0.3.1"
futures = { version = "0.3.25" }
gpio-cdev = { version = "0.6.0", features = ["async-tokio"] }
serde = "1.0.219"
toml = "0.9.5"
indexmap = { version = "2.10.0", optional = true }
serde_derive = "1.0.219"
bitflags = "2.9.1"
libc = "0.2.174"
nix = "0.30.1"
async-std = "1.13.1"
rand = "0.9.2"
can-dbc = "5.0.0"
codegen = "0.2.0"
lazy_static = "1.5.0"

[dev-dependencies]
futures-util = "0.3.31"

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"

[features]
default = []
preserve_order = ["indexmap"]
